--- a/web/css/layout.css
+++ b/web/css/layout.css
@@ -1,28 +1,31 @@
-/* body{
-    margin: 20px;
-    font-size: 150%;
-      border: 1px dotted silver;
+/* Remove the navbar's default margin-bottom and rounded borders */
+.navbar {
+  margin-bottom: 0;
+  border-radius: 0;
 }
 
-.footer{
-    position: fixed;
-     margin: 20px;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color:aquamarine;
-    color:black;
-    text-align: center;
-} */
+/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
+.row.content {height: 450px}
 
+/* Set gray background color and 100% height */
+.sidenav {
+  padding-top: 20px;
+  background-color: #f1f1f1;
+  height: 100%;
+}
 
-.sample {
-  border: 1px dotted silver;
+/* Set black background color, white text and some padding */
+footer {
+  background-color: #555;
+  color: white;
   padding: 15px;
 }
-[class^=col] {
-  border: 1px solid blue;
-}
-body {
-  margin: 20px;
+
+/* On small screens, set height to 'auto' for sidenav and grid */
+@media screen and (max-width: 767px) {
+  .sidenav {
+    height: auto;
+    padding: 15px;
+  }
+  .row.content {height:auto;}
 }
