--- a/web/css/layout.css
+++ b/web/css/layout.css
@@ -5,7 +5,7 @@
 }
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-.row.content {height: 450px}
+.row.content {height: 100%}
 
 /* Set gray background color and 100% height */
 .sidenav {
