--- a/web/css/detectfaces.css
+++ b/web/css/detectfaces.css
@@ -1,22 +1,20 @@
 #accordion {
     /*width: 500px;*/
-    border: 1px solid black;
+    /*border: 1px dotted silver;*/
 }
 
-.heading {
-    padding: 5px;
-    margin: 0;
-    background: #ddd;
+.heading{
+    margin: 2px;
+    padding: 2px;
 }
 
 .list{
-    padding: 0 5px;
-    list-style-type: none;
+    border: 1px dotted cornflowerblue;
 }
 
 .item{
     padding: 5px;
-
+    font-weight: bold;
 }
 
 .modal {
